duniverse/menhirLib.20200211/test/static/bad/list-of-productions-expected.mly
%%

main:
  A |

%type<int> main
